Ajuste no equals para fins de compatibilidade.